--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,97 +1,23 @@
-name: GitHub Snake Game
-
-
-
+name: Generate “Snake Eating My Contributions”
 on:
-
-  # Schedule the workflow to run daily at midnight UTC
-
+  # daily at midnight UTC (adjust cron as you like)
   schedule:
-
-    - cron: "0 0 * * *"
-
-
-
-  # Allow manual triggering of the workflow
-
+    - cron:  '0 0 * * *'
+  # manual trigger
   workflow_dispatch:
 
-
-
-  # Trigger the workflow on pushes to the main branch
-
-  push:
-
-    branches:
-
-      - main
-
-
-
 jobs:
-
-  generate:
-
+  build:
     runs-on: ubuntu-latest
-
-    timeout-minutes: 10
-
-
-
     steps:
-
-      # Step 1: Checkout the repository
-
-      - name: Checkout Repository
-
+      - name: Check out repo
         uses: actions/checkout@v3
 
-
-
-      # Step 2: Generate the snake animations
-
-      - name: Generate GitHub Contributions Snake Animations
-
+      - name: Generate contribution-grid snake
         uses: Platane/snk@v3
-
         with:
-
-          # GitHub username to generate the animation for
-
-          github_user_name: ${{ github.repository_owner }}
-
-
-
-          # Define the output files and their configurations
-
-          outputs: |
-
-            dist/github-snake.svg
-
-            dist/github-snake-dark.svg?palette=github-dark
-
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-
-        env:
-
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-
-      # Step 3: Deploy the generated files to the 'output' branch
-
-      - name: Deploy to Output Branch
-
-        uses: peaceiris/actions-gh-pages@v3
-
-        with:
-
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
-          publish_dir: ./dist
-
-          publish_branch: output
-
-          # Optionally, you can set a custom commit message
-
-          commit_message: "Update snake animation [skip ci]"
+          # your GitHub username
+          github_user_name: built-different-13
+          # one output per line; customize palette & snake color if you like
+          files: |
+            output/github-contribution-grid-snake.svg?palette=github&color_snake=00ff00
